--- a/content.html
+++ b/content.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Markdown Files" href="markdown.html" />
-    <link rel="prev" title="Welcome to your Jupyter Book" href="intro.html" />
+    <link rel="prev" title="Unsupervised machine learning on illicit financial flows in Africa" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -68,7 +68,7 @@
   
   <ul class="nav sidenav_l1">
   <li class="">
-    <a href="intro.html">Welcome to your Jupyter Book</a>
+    <a href="intro.html">Unsupervised machine learning on illicit financial flows in Africa</a>
   </li>
   <li class="active">
     <a href="">Content in Jupyter Book</a>
@@ -172,7 +172,7 @@ covers a few tips for how to do so.</p>
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Welcome to your Jupyter Book</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Unsupervised machine learning on illicit financial flows in Africa</a>
     <a class='right-next' id="next-link" href="markdown.html" title="next page">Markdown Files</a>
 
     </div>
