--- a/notebooks.html
+++ b/notebooks.html
@@ -67,7 +67,7 @@
   
   <ul class="nav sidenav_l1">
   <li class="">
-    <a href="intro.html">Welcome to your Jupyter Book</a>
+    <a href="intro.html">Unsupervised machine learning on illicit financial flows in Africa</a>
   </li>
   <li class="">
     <a href="content.html">Content in Jupyter Book</a>
