--- a/search.html
+++ b/search.html
@@ -71,7 +71,7 @@
   
   <ul class="nav sidenav_l1">
   <li class="">
-    <a href="intro.html">Welcome to your Jupyter Book</a>
+    <a href="intro.html">Welcome to your Jupyter Book - test on gh-pages branch</a>
   </li>
   <li class="">
     <a href="content.html">Content in Jupyter Book</a>
