--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -11,6 +11,9 @@
             width: 100%;
             height: 100%;
             font-family: Arial, Helvetica, sans-serif;
+            background-size: 100% 100%;
+            background-attachment: fixed;
+            background-image: url(_static/password-bg.jpg);
         }
         #dialogText {
             padding: 10px 30px;
@@ -25,7 +28,7 @@
             width: 100%;
             height: 100%;
             display: table;
-            background-color: #EEEEEE;
+            /*background-color: #EEEEEE;*/
         }
         
         #dialogWrapCell {
@@ -37,9 +40,9 @@
         #mainDialog {
             max-width: 400px;
             margin: 5px;
-            border: solid #AAAAAA 1px;
+            border: solid #AAAAAA 0px;
             border-radius: 10px;
-            box-shadow: 3px 3px 5px 3px #AAAAAA;
+            /*box-shadow: 3px 3px 5px 3px #AAAAAA;*/
             margin-left: auto;
             margin-right: auto;
             background-color: #FFFFFF;
@@ -91,22 +94,9 @@
             width: 100%;
             height: 100%;
         }
-        #attribution {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            text-align: center;
-            padding: 10px;
-            font-weight: bold;
-            font-size: 0.8em;
-        }
-        #attribution, #attribution a {
-            color: #999;
-        }
     </style>
   </head>
-  <body background="_static/password-bg.jpg">
+  <body>
     <iframe id="contentFrame" frameBorder="0" allowfullscreen></iframe>
     <div id="dialogWrap">
         <div id="dialogWrapCell">
