--- a/intro.html
+++ b/intro.html
@@ -78,6 +78,9 @@
   <li class="">
     <a href="notebooks.html">Content with notebooks</a>
   </li>
+  <li class="">
+    <a href="Unsupervised-learning-trade.html">Preamble</a>
+  </li>
 </ul>
 </nav>
 
