--- a/markdown.html
+++ b/markdown.html
@@ -79,6 +79,9 @@
   <li class="">
     <a href="notebooks.html">Content with notebooks</a>
   </li>
+  <li class="">
+    <a href="Unsupervised-learning-trade.html">Preamble</a>
+  </li>
 </ul>
 </nav>
 
