--- a/notebooks.html
+++ b/notebooks.html
@@ -31,6 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
+    <link rel="next" title="Preamble" href="Unsupervised-learning-trade.html" />
     <link rel="prev" title="Markdown Files" href="markdown.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -77,6 +78,9 @@
   </li>
   <li class="active">
     <a href="">Content with notebooks</a>
+  </li>
+  <li class="">
+    <a href="Unsupervised-learning-trade.html">Preamble</a>
   </li>
 </ul>
 </nav>
@@ -246,6 +250,7 @@ with your book. For more information about this, see <a class="reference externa
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="markdown.html" title="previous page">Markdown Files</a>
+    <a class='right-next' id="next-link" href="Unsupervised-learning-trade.html" title="next page">Preamble</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
