--- a/search.html
+++ b/search.html
@@ -82,6 +82,9 @@
   <li class="">
     <a href="notebooks.html">Content with notebooks</a>
   </li>
+  <li class="">
+    <a href="Unsupervised-learning-trade.html">Preamble</a>
+  </li>
 </ul>
 </nav>
 
