--- a/intro.html
+++ b/intro.html
@@ -79,7 +79,7 @@
     <a href="notebooks.html">Content with notebooks</a>
   </li>
   <li class="">
-    <a href="Unsupervised-learning-trade.html">Preamble</a>
+    <a href="Unsupervised-learning-trade.html">Introduction</a>
   </li>
 </ul>
 </nav>
