--- a/notebooks.html
+++ b/notebooks.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Content with notebooks &#8212; Illicit Trade</title>
+    <title>Content with notebooks &#8212; Illicit Financial Flows</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <link href="_static/css/index.css" rel="stylesheet">
     <link rel="stylesheet" href="_static/sphinx-book-theme.css" type="text/css" />
@@ -32,8 +32,6 @@
     <link rel="shortcut icon" href="_static/favicon.ico"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Introduction" href="Unsupervised-learning-trade.html" />
-    <link rel="prev" title="Markdown Files" href="markdown.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -55,7 +53,7 @@
   <img src="_static/money-laundering.png" class="logo" alt="logo">
   
   
-  <h1 class="site-logo" id="site-title">Illicit Trade</h1>
+  <h1 class="site-logo" id="site-title">Illicit Financial Flows</h1>
   
 </a>
 </div>
@@ -69,16 +67,13 @@
   
   <ul class="nav sidenav_l1">
   <li class="">
-    <a href="content.html">Content in Jupyter Book</a>
+    <a href="introduction.html">Introduction</a>
   </li>
   <li class="">
-    <a href="markdown.html">Markdown Files</a>
-  </li>
-  <li class="active">
-    <a href="">Content with notebooks</a>
+    <a href="setup.html">Set-up of this Jupyter Book</a>
   </li>
   <li class="">
-    <a href="Unsupervised-learning-trade.html">Introduction</a>
+    <a href="Unsupervised-learning-trade.html">Trade mis-invoicing in Africa</a>
   </li>
 </ul>
 </nav>
@@ -263,8 +258,6 @@ with your book. For more information about this, see <a class="reference externa
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="markdown.html" title="previous page">Markdown Files</a>
-    <a class='right-next' id="next-link" href="Unsupervised-learning-trade.html" title="next page">Introduction</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
