--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Search &#8212; Illicit Trade</title>
+    <title>Search &#8212; Illicit Financial Flows</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <link href="_static/css/index.css" rel="stylesheet">
     <link rel="stylesheet" href="_static/sphinx-book-theme.css" type="text/css" />
@@ -58,7 +58,7 @@
   <img src="_static/money-laundering.png" class="logo" alt="logo">
   
   
-  <h1 class="site-logo" id="site-title">Illicit Trade</h1>
+  <h1 class="site-logo" id="site-title">Illicit Financial Flows</h1>
   
 </a>
 </div>
@@ -72,16 +72,13 @@
   
   <ul class="nav sidenav_l1">
   <li class="">
-    <a href="content.html">Content in Jupyter Book</a>
+    <a href="introduction.html">Introduction</a>
   </li>
   <li class="">
-    <a href="markdown.html">Markdown Files</a>
+    <a href="setup.html">Set-up of this Jupyter Book</a>
   </li>
   <li class="">
-    <a href="notebooks.html">Content with notebooks</a>
-  </li>
-  <li class="">
-    <a href="Unsupervised-learning-trade.html">Introduction</a>
+    <a href="Unsupervised-learning-trade.html">Trade mis-invoicing in Africa</a>
   </li>
 </ul>
 </nav>
